# inbox

./: .gitignore  README.md  extract.py  life  pyproject.toml  sync.py
gmail-sync/: extract.py  models.py  pyproject.toml  sync.py
