[project]
name = "gmail-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-genai>=1.59.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "jsonref>=1.1.0",
    "python-dotenv>=1.0.0",
]
